# ByteFlow

./: .gitignore  README.md  config.py  dataset.py  engine.py  pyproject.toml  train.py
byteflow/: __init__.py  engine.py  metrics.py  model.py
byteflow.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
byteflow/utils/: device.py
examples/: demo.py
examples/sample_dataset/: README.txt
tests/: __init__.py  test_dataset.py  test_model_engine.py
utils/: seed.py
